remove mpdf, fix warning for php7.4.0

--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,10 @@
         "symfony/validator": "2.5.*",
         "symfony/config": "2.5.*",
         "symfony/translation": "2.5.*",
-        "symfony/locale": "2.5.*",
-        "mpdf/mpdf": "6.1.0"
+        "symfony/locale": "2.5.*"
     },
     "minimum-stability": "dev",
     "autoload": {
         "psr-0": { "": "src/" }
     }    
 }
-
